Add examples & citations

--- a/src/topics/gestalt-theory/index.mdx
+++ b/src/topics/gestalt-theory/index.mdx
@@ -30,7 +30,8 @@ There are 4 key properties with gestalt systems: emergence, reification, multist
 
 With _emergence_, we simplify elements to their general forms. Detailed objects can be slower and more difficult to understand, so our minds focus on the simpler options: the overall outline of a form.
 
-<figure className="grid gap-6 gap-y-12 md:grid-cols-3">
+<figure>
+  <div className="grid gap-6 gap-y-12 md:grid-cols-3">
   <Panel>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 179.19 156.72" className="fill-current">
       <circle cx="87.2" cy="146.06" r="1.34"/>
@@ -259,6 +260,19 @@ With _emergence_, we simplify elements to their general forms. Detailed objects 
       Other principles and concepts discuss our ways of grouping elements, but emergence is specifically looking at that "bigger picture" and eschewing too much detail for the simpler explanation.
     </p>
   </figcaption>
+  </div>
+
+<License
+  type="cc"
+  ccVersion="4.0"
+  ccLicense="BY-NC-SA"
+  mediaType="Heart illustration"
+  authors={[
+    {
+      name: 'Stephy Miehle on behalf of McHenry County College'
+    },
+  ]}
+/>
 </figure>
 
 <Blockquote
@@ -457,6 +471,17 @@ We can recognize objects even when they are rotated, scaled, stretched, lightly 
   <figcaption>
     The 2 of clubs is warped, rotated in 3D, and skewed diagonally, but our minds interpret all of these cards to be versions of the top-left playing card.
   </figcaption>
+  <License
+  type="cc"
+  ccVersion="4.0"
+  ccLicense="BY-NC-SA"
+  mediaType="Card illustration"
+  authors={[
+    {
+      name: 'Stephy Miehle on behalf of McHenry County College'
+    },
+  ]}
+/>
 </figure>
 
 <Blockquote
@@ -549,6 +574,18 @@ Nearby objects are perceptually grouped together. Space between objects (and gro
   <figcaption>
     We can perceive groups within groups. On the left is a group with 3 columns. On the right, a group with 3 columns of 2-column dots.
   </figcaption>
+
+<License
+  type="cc"
+  ccVersion="4.0"
+  ccLicense="BY-NC-SA"
+  mediaType="Dot illustration"
+  authors={[
+    {
+      name: 'Stephy Miehle on behalf of McHenry County College'
+    },
+  ]}
+/>
 </figure>
 
 <figure>
@@ -568,19 +605,47 @@ Nearby objects are perceptually grouped together. Space between objects (and gro
 Some old-school interpretations place this within the realm of Proximity – newer laws, including this one, were added to gestalt theory later on. _Common Region_ uses boundaries such as background colors or borders to help separate and group content. These boundaries create "containers" or "blocks" for your content and are heavily used in interface design.
 
 <figure>
+
   <Img src="./serious-eats.png" alt="Screenshot of Serious Eats homepage showing articles grouped in cards" />
+
   <figcaption>
     The <Link to="https://www.seriouseats.com/">Serious Eats</Link> site has many articles and recipes laid out in content cards. These are one of the easiest ways to create a relationship between an image and text as well as separate individual articles from each other. This is slightly different from the Spotify proximity example, as the descriptions here are contained within blocks that have a background color separating them from the page.
   </figcaption>
+
+<License
+  type="copyright"
+  mediaType="Website"
+  authors={[
+    {
+      name: 'Serious Eats',
+      link: 'https://www.seriouseats.com'
+    },
+  ]}
+/>
+
 </figure>
 
 Common Region is helpful when white space alone isn't enough to keep content separated, but too many harsh boundaries can make a design look cluttered. Worse, users might reach the end of a region and think that they've reached the end of the page or screen. Design elements can inform the user that there is still content to discover.
 
 <figure>
+
   <Img src="./stripe.png" alt="Screenshot of Stripe's website showing diagonal sections" />
+
   <figcaption>
     The <Link to="https://www.stripe.com/">Stripe</Link> website has occasional diagonal edges on its common regions. When you scroll down the page and think you may have reached the bottom, seeing one of the diagonal corners peeking out of the screen signals that you should keep scrolling.
   </figcaption>
+
+<License
+  type="copyright"
+  mediaType="Website"
+  authors={[
+    {
+      name: 'Stripe',
+      link: 'https://www.stripe.com/'
+    },
+  ]}
+/>
+
 </figure>
 
 Read more: [Nielsen Norman Group, "The Principle of Common Region: Containers Create Groupings"](https://www.nngroup.com/articles/common-region/)
@@ -696,10 +761,24 @@ Elements that are similar are grouped together. You can build similiarity with s
 </figure>
 
 <figure>
+
   <Img src="./grubhub.png" alt="Screenshot of Serious Eats homepage showing articles grouped in cards" />
+
   <figcaption>
     The <Link to="https://www.grubhub.com/">GrubHub</Link> sign-in page has options to sign in with an account on their site (username/password) or through separate apps (Google, Facebook). All of these are presented as similar wide, colorful buttons with centered text and small icons along the left side. The change in color helps to identify each app and show that while they're related options, they are not the <em>same</em> options.
   </figcaption>
+
+<License
+  type="copyright"
+  mediaType="Website"
+  authors={[
+    {
+      name: 'GrubHub',
+      link: 'https://www.grubhub.com/'
+    },
+  ]}
+/>
+
 </figure>
 
 ### Closure
@@ -707,6 +786,7 @@ Elements that are similar are grouped together. You can build similiarity with s
 Closure is a popular choice for design elements, especially logos and illustrations. We "fill in the blanks" to create a whole element. Effective use of closure gives us just enough information to see the intended design; without enough details, closure could be interpreted in too many ways.
 
 <figure>
+
   <Panel>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 729.77 203.03" className="w-full">
       <path className="fill-current text-purple-300" d="M645.53,107.69c-21.57-9.8-.22-44.55,18.59-32.11,2.32-2.89,4.32-7.63,7.48-10.19,10-12.66,31.2-6.11,33.13,9.72,1.75,6.29-2.39,8.07,4.36,6.57,14.8-2.52,25.51,17.32,18.45,29.51a2,2,0,0,0-.14,2.91c5.18,11.48-4,23.11-15.67,24.13a18.6,18.6,0,0,1-5.64,6.91c0-.08-.76.51-.86.59-4.33,3.09-10.26,3.89-15.56,3.62l0,0c-.57,0-1.23-.2-1.71-.24a.56.56,0,0,0-.41-.11c-.06,0-.12-.12-.16,0a17.51,17.51,0,0,1-12.22-12.86C653.5,148.24,642.47,123.29,645.53,107.69ZM637.21,111c-1.23-2.55-4.74-2.07-6.69-1.28h0c-4,1.46-.86,5.91,1.82,8.6a4.34,4.34,0,0,0,3,1.36C639.31,119.77,639.19,113.85,637.21,111Zm-10.85,8.16c1.45-2.66-2.41-6.41-4.08-3,0,.27-.09.54-.13.81C622.16,119,624.93,121.61,626.36,119.19Zm-9,.92c2.08-.58,1.76-4.7-.8-3.87l-.46.35C615.14,117.66,615.41,120.57,617.38,120.11Z"/>
@@ -728,6 +808,19 @@ Closure is a popular choice for design elements, especially logos and illustrati
   <figcaption>
     With enough information, we understand that the dashed lines create a circle. When too many are removed, the shape is ambiguous: is it a square? A circle? Something else entirely? We need to leave enough clues for our minds to come to the right conclusion.
   </figcaption>
+
+<License
+  type="cc"
+  ccVersion="4.0"
+  ccLicense="BY-NC-SA"
+  mediaType="Illustration"
+  authors={[
+    {
+      name: 'Stephy Miehle on behalf of McHenry County College'
+    },
+  ]}
+/>
+
 </figure>
 
 The original NBC peacock logo was much busier than its current design. The peacock was outlined in front of its rainbow feathers. In 1986, the outline was removed and the peacock's body was implied through clever use of a triangle of negative space and the small beak overlapping the purple shape.
@@ -806,30 +899,59 @@ When we see elements forming a path, we treat those elements as a related set. W
 
 This one is huge on mobile! We can take advantage of horizontal scrolling to show additional content without taking up as much vertical room. Once we see enough elements creating a horizontal path, we understand that we can scroll to see more, especially if we see the last one partially cut-off.
 
-<figure className="grid gap-6 md:grid-cols-3">
-  <div>
+<div className="grid gap-6 md:grid-cols-3">
+  <figure>
     <Img src="./netflix-avatars.png" alt="Avatar selection on Netflix" />
-    <figcaption>Avatar selection on Netflix uses horizontal and vertical continuity, as there are many more rows to choose from</figcaption>
-  </div>
-  <div>
+    <figcaption>
+      <p>
+        Avatar selection on Netflix uses horizontal and vertical continuity, as there are many more rows to choose from
+      </p>
+      <p>Interface &copy; <a href="https://www.netflix.com">Netflix</a></p>
+    </figcaption>
+  </figure>
+  <figure>
     <Img src="./google-play-games.png" alt="Google Play Games" />
-    <figcaption>Google Play Games has horizontal and vertical continuity</figcaption>
-  </div>
-  <div>
+    <figcaption>
+      <p>
+        Google Play Games has horizontal and vertical continuity
+      </p>
+      <p>Interface &copy; <a href="https://play.google.com">Google Play</a></p>
+    </figcaption>
+  </figure>
+  <figure>
     <Img src="./stardew.png" alt="Google Play Games" />
-    <figcaption>Google Play Games features many rows of content cut off horizontally</figcaption>
-  </div>
-</figure>
+    <figcaption>
+      <p>
+        Google Play Games features many rows of content cut off horizontally
+      </p>
+      <p>Interface &copy; <a href="https://play.google.com">Google Play</a></p>
+    </figcaption>
+  </figure>
+</div>
 
 ### Common Fate
 
 When elements are moving towards the same direction, we perceive them to be related. Another very similar related principle is _Parallelism_, when elements are not only moving together but are parallel as well.
 
 <figure>
+
   <Img src="./google-trends.png" alt="Trend charts showing pho and ramen searches increasing, while soba searches stay relatively steady" />
+
   <figcaption>
     On <Link to="https://trends.google.com/trends/explore?date=all&geo=US&q=%2Fm%2F02y17j,%2Fm%2F09gms,%2Fm%2F012y1_">Google Trends</Link>, searches from 2004-present have steadily increased for "pho" and "ramen" but stayed relatively stable for the "soba" search term. Though all chart lines are moving horizontally and share a common fate, we might also consider "pho" and "ramen" to be more related to each other than to "soba" because their chart lines look more similar (and they both became much trendier).
   </figcaption>
+
+<License
+  type="copyright"
+  mediaType="Website"
+  authors={[
+    {
+      name: 'Google Trends',
+      link: 'https://trends.google.com/trends/explore?date=all&geo=US&q=%2Fm%2F02y17j,%2Fm%2F09gms,%2Fm%2F012y1_'
+    },
+  ]}
+/>
+
 </figure>
 
 ### Prägnanz (Good Form)
@@ -1040,6 +1162,18 @@ We can feed this need for simplicity with our design choices, too. These charts 
 
   </div>
 
+<License
+  type="cc"
+  ccVersion="4.0"
+  ccLicense="BY-NC-SA"
+  mediaType="Chart illustrations"
+  authors={[
+    {
+      name: 'Stephy Miehle on behalf of McHenry County College'
+    },
+  ]}
+/>
+
 </figure>
 
 ## Figure-Ground Relationship
@@ -1084,15 +1218,41 @@ A reversible or ambiguous figure-ground relationship can display _multistability
     </div>
   </div>
 
+<License
+  type="cc"
+  ccVersion="4.0"
+  ccLicense="BY-NC-SA"
+  mediaType="Illustrations"
+  authors={[
+    {
+      name: 'Stephy Miehle on behalf of McHenry County College'
+    },
+  ]}
+/>
+
 </figure>
 
 Figure-ground can move beyond illustrations. Below, website elements are layered to focus attention. We know which elements are on top because of the partially-transparent shadow (often called a "curtain" in this treatment) covering up the rest of the page, or the _ground_. Since the pop-up window is not covered by this curtain, it must be stacked on top of it. This effectively designates the pop-up window as a stable figure on top of the rest of the page.
 
 <figure>
+
   <Img src="./gap.png" alt="Screenshot of a modal on the Gap website" />
+
   <figcaption>
     A modal window on <Link to="https://www.gap.com/">GAP</Link> uses a partially-transparent "curtain" to create contrast between the modal pop-up window and the rest of the page.
   </figcaption>
+
+<License
+  type="copyright"
+  mediaType="Website"
+  authors={[
+    {
+      name: 'GAP',
+      link: 'https://www.gap.com'
+    },
+  ]}
+/>
+
 </figure>
 
 ## Sample Interface: LOCUS
