--- a/src/topics/color-blindness/index.mdx
+++ b/src/topics/color-blindness/index.mdx
@@ -10,6 +10,8 @@ resources:
     link: https://kotaku.com/what-its-like-to-play-games-when-youre-colorblind-1606030489
   - title: Facts About Color Blindness
     link: https://nei.nih.gov/health/color_blindness/facts_about
+  - title: Colorblindly Chrome Add-On
+    link: https://chrome.google.com/webstore/detail/colorblindly/floniaahmccleoclneebhhmnjgdfijgg
 ---
 
 <Blockquote
@@ -21,17 +23,125 @@ resources:
   </p>
 </Blockquote>
 
+<figure>
+
+  <Img src="./Color_blindness.png" alt="A comparison of the visible color spectrum in common types of color blindness" className="w-full" />
+  <figcaption>
+    A comparison of the visible color spectrum in common types of color blindness
+  </figcaption>
+
+  <License
+    type="public"
+    link="https://commons.wikimedia.org/wiki/File:Color_blindness.png"
+    mediaType="Illustration"
+    authors={[
+      {
+        name: 'Nanobot on Wikipedia',
+        link: 'https://commons.wikimedia.org/wiki/File:Color_blindness.png',
+      },
+    ]}
+  />
+
+</figure>
+
 Color blindness and deficiencies come in a variety of types, most commonly red-green. This is a huge deal when you consider that red and green are often used for "success" or "error" feedback in messaging, buttons, and so forth. If color is the sole differentiator between two objects, chances are, there will be some frustrated users.
 
-Compare this image from Smashing Magazine to the version run through [Vischeck](http://www.vischeck.com/):
+Compare these banners to the version run through [Colorblindly](https://chrome.google.com/webstore/detail/colorblindly/floniaahmccleoclneebhhmnjgdfijgg):
 
-TODO: Add image
+<div className="grid gap-6 sm:grid-cols-2 my-6">
+  <div>
+    <h3 className="mt-0 text-lg font-bold mb-2">Standard Colors</h3>
+    <div className="grid gap-4 text-white">
+      <div className="w-full">
+        <div className="bg-green-600 p-2 text-sm truncate">
+          Product added to cart
+        </div>
+        <div className="bg-red-600 p-2 text-sm truncate">
+          Problem adding product to cart
+        </div>
+      </div>
+      <div className="w-full">
+        <div className="bg-green-600 p-2 text-sm truncate">
+          Success: Product added to cart
+        </div>
+        <div className="bg-red-600 p-2 text-sm truncate">
+          Error: Problem adding product to cart
+        </div>
+      </div>
+      <div className="w-full">
+        <div className="bg-green-600 p-2 text-sm truncate flex items-center">
+          <FontAwesomeIcon icon={['far', 'check']} className="mr-2 text-lg" /> Product added to cart
+        </div>
+        <div className="bg-red-600 p-2 text-sm truncate flex items-center">
+          <FontAwesomeIcon icon={['far', 'exclamation-triangle']} className="mr-2 text-lg" /> Problem adding product to cart
+        </div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <h3 className="mt-0 text-lg font-bold mb-2">Deuteranopia-Simulated Colors</h3>
+    <div className="grid gap-4 text-white">
+      <div className="w-full">
+        <div className="p-2 text-sm truncate" style={{backgroundColor: '#4B4065'}}>
+          Product added to cart
+        </div>
+        <div className="p-2 text-sm truncate" style={{backgroundColor: '#98A526'}}>
+          Problem adding product to cart
+        </div>
+      </div>
+      <div className="w-full">
+        <div className="p-2 text-sm truncate" style={{backgroundColor: '#4B4065'}}>
+          Success: Product added to cart
+        </div>
+        <div className="p-2 text-sm truncate" style={{backgroundColor: '#98A526'}}>
+          Error: Problem adding product to cart
+        </div>
+      </div>
+      <div className="w-full">
+        <div className="p-2 text-sm truncate flex items-center" style={{backgroundColor: '#4B4065'}}>
+          <FontAwesomeIcon icon={['far', 'check']} className="mr-2 text-lg" /> Product added to cart
+        </div>
+        <div className="p-2 text-sm truncate flex items-center" style={{backgroundColor: '#98A526'}}>
+          <FontAwesomeIcon icon={['far', 'exclamation-triangle']} className="mr-2 text-lg" /> Problem adding product to cart
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 Helper text is good, but adding icons is even better. When we consider that many users are skimming and not actually reading the text, any visual cues we can add will aid them.
 
 Of course, there are plenty of times when we can't add helper text or cute icons. Enter: video games. Here is a design with bright, colorful orbs; shoot a colored orb from the bottom to clear a matching group of orbs in the top section.
 
-TODO: Add image
+<figure>
+
+  <div className="grid gap-6 md:grid-cols-2">
+    <div>
+      <Img src="./puzzle-bobble.jpg" alt="Puzzle Bobble with standard vision" className="w-full" />
+      <figcaption>
+        Standard vision
+      </figcaption>
+    </div>
+    <div>
+      <Img src="./puzzle-bobble-simulation.jpg" alt="Puzzle Bobble with deuteranope-simulated vision" className="w-full" />
+      <figcaption>
+        Deuteranope-simulated vision
+      </figcaption>
+    </div>
+  </div>
+
+  <License
+    type="copyright"
+    mediaType="Game screenshot"
+    authors={[
+      {
+        name: 'Puzzle Bobble (Bust-A-Move)',
+        link: 'https://en.wikipedia.org/wiki/Puzzle_Bobble',
+      },
+    ]}
+  />
+
+</figure>
 
 Good luck doing well in the game if you have difficulty differentiating red and green. Sure, there are slight differences in the orbs, but not enough to be considered colorblind-friendly. There is an [increasing amount of gamers](https://www.reddit.com/r/gaming/comments/4qawl2/were_looking_for_more_colorblind_gamers_to_form/) looking for colorblind-accessible games that work well.
 
@@ -41,9 +151,54 @@ Luckily, there is one game category that has this problem solved: match-3 games.
 
 This type of game is very common. Many of them use the same (or quite similar) mechanics, so it is easy to make a spin-off game once you've figured out the technical side; new graphics can be enough to make it a "new" game.
 
-In this type of game, you swap neighboring pieces to make matches of 3 or more of the same piece. Not only are the pieces different colors, but often unique shapes; unlike the previous image example, these would be easy to tell apart even in greyscale. Food and gemstones are common themes, copying off of the fame of two major games: Bejeweled and Candy Crush.
+In this type of game, you swap neighboring pieces to make matches of 3 or more of the same piece. Not only are the pieces different colors, but often unique shapes; unlike the previous image example, these would be **easy to tell apart even in greyscale**. Food and gemstones are common themes, copying off of the fame of two major games: Bejeweled and Candy Crush.
 
-TODO: Add many images
+Check out the examples below and note how the designers used these techniques to help users differentiate the pieces:
+- Unique shapes
+- Colors that vary in lightness, not just hue
+
+Though the pieces are different, they are still unified in their illustration style, color scheme, 3D perspective (if any), and light source.
+
+<FullWidthContainer>
+
+  <div className="grid gap-6 mx-auto my-6 max-w-7xl p-4 grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    <figure>
+      <Img src="./candy-crush.webp" alt="Candy Crush" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=com.king.candycrushsaga">Candy Crush</a></figcaption>
+    </figure>
+    <figure>
+      <Img src="./farm-heroes.webp" alt="Farm Heroes Saga" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=com.king.farmheroessaga">Farm Heroes Saga</a></figcaption>
+    </figure>
+    <figure>
+      <Img src="./cookie-jam-blast.webp" alt="Cookie Jam Blast" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=air.com.sgn.cookiejamblast.gp">Cookie Jam Blast</a></figcaption>
+    </figure>
+    <figure>
+      <Img src="./pets-blast.webp" alt="Pet Fever" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=casual.match3.pets.blast.matching.game">Pet Fever</a></figcaption>
+    </figure>
+    <figure>
+      <Img src="./angry-birds-match.webp" alt="Angry Birds Match" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=com.rovio.abmatch3">Angry Birds Match</a></figcaption>
+    </figure>
+    <figure>
+      <Img src="./aladdin-blast.webp" alt="Magic Lamp" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=com.cookapps.ff.aladdinblast">Magic Lamp</a></figcaption>
+    </figure>
+    <figure>
+      <Img src="./hp.webp" alt="Harry Potter: Puzzles & Spells" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=air.com.sgn.cookiejamblast.gp">Harry Potter: Puzzles & Spells</a></figcaption>
+    </figure>
+    <figure>
+      <Img src="./bejeweled.webp" alt="Bejeweled Stars" />
+      <figcaption>&copy; <a href="https://play.google.com/store/apps/details?id=com.ea.gp.bejeweledskies">Bejeweled Stars</a></figcaption>
+    </figure>
+  </div>
+
+</FullWidthContainer>
+
+## Creating a Match-3 Game in Figma
 
 https://www.youtube.com/watch?v=xRVZ7IP4bzM
 
