--- a/src/topics/flowcharts/index.mdx
+++ b/src/topics/flowcharts/index.mdx
@@ -49,19 +49,50 @@ Start with the first screen that a user will see. Think about your questions; ma
 
 ## What to Use
 
-UX is a very flexible field, and you'll often have the opportunity to choose the best tool for the job. From low-tech to high-tech,  there are many ways to work. View the slides for any method you are interested in:
+UX is a very flexible field, and you'll often have the opportunity to choose the best tool for the job. From low-tech to high-tech, there are many ways to work. View the slides for any method you are interested in:
+
+<FullWidthContainer>
+  <div className="max-w-7xl mx-auto">
 
 <div className="iframe-16-9">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vS79XqPlSDTfFYvUrgC5hCa931SQVKdUjg8gjmT9oLUPRD3HUlejflsScYbuMvyQitAqr_WXcLoPryo/embed?start=false&loop=false&delayms=60000" frameborder="0" width="960" height="569" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <iframe
+    src="https://docs.google.com/presentation/d/e/2PACX-1vS79XqPlSDTfFYvUrgC5hCa931SQVKdUjg8gjmT9oLUPRD3HUlejflsScYbuMvyQitAqr_WXcLoPryo/embed?start=false&loop=false&delayms=60000"
+    frameborder="0"
+    width="960"
+    height="569"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true"
+  ></iframe>
 </div>
 
 <div className="iframe-16-9">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTlbY84g9YOA6DhpWolOVEW7laoTQZPyS_QTDdX0eiDf8AchGW1NSIqNsbELjrRXvnpSW-fqiCZLwG6/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <iframe
+    src="https://docs.google.com/presentation/d/e/2PACX-1vTlbY84g9YOA6DhpWolOVEW7laoTQZPyS_QTDdX0eiDf8AchGW1NSIqNsbELjrRXvnpSW-fqiCZLwG6/embed?start=false&loop=false&delayms=3000"
+    frameborder="0"
+    width="960"
+    height="569"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true"
+  ></iframe>
 </div>
 
 <div className="iframe-16-9">
-  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSTfufw47b1nOcNpW6iGz5LAbjECLLh5VD6pN3wDZbWFW8-SUKwkWA8bDVPGMG9amDBdAsqMknflMM8/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <iframe
+    src="https://docs.google.com/presentation/d/e/2PACX-1vSTfufw47b1nOcNpW6iGz5LAbjECLLh5VD6pN3wDZbWFW8-SUKwkWA8bDVPGMG9amDBdAsqMknflMM8/embed?start=false&loop=false&delayms=3000"
+    frameborder="0"
+    width="960"
+    height="569"
+    allowfullscreen
+    mozallowfullscreen="true"
+    webkitallowfullscreen="true"
+  ></iframe>
 </div>
 
+</div>
+</FullWidthContainer>
+
+- [Learn how to use FigJam](/figjam)
 - [Download a sample Figma flowchart kit from Epic Pxls](https://www.epicpxls.com/items/flowchart-kit-for-figma)
 - [View sample LucidChart flowchart](https://www.lucidchart.com/documents/view/ee08edd8-abcb-4865-a4d5-840aab7c50a0/0_0)
