Update reference links & captions

--- a/src/topics/figma/index.mdx
+++ b/src/topics/figma/index.mdx
@@ -4,8 +4,8 @@ topic: software
 resources:
   - title: Figma Desktop App
     link: https://www.figma.com/downloads
-  - title: Google Fonts Superfamilies
-    link: https://fonts.google.com/featured/Superfamilies
+  - title: 'Figma Essential Training: The Basics'
+    link: https://www.linkedin.com/learning/figma-essential-training-the-basics/the-basics-of-figma
 ---
 
 These instructions will be for the **web version** of Figma, but if you're working on your own Windows or Mac machine, you can install the [desktop app](https://www.figma.com/downloads).
@@ -23,13 +23,19 @@ Non-designers can also **comment right on your documents** instead of making you
 Figma also comes with **version control**, so you can rewind your changes. No more keeping 12 files in a folder as "save states" with a cryptic naming system!
 
 <figure>
-<img src="final-files.png" alt="Screenshot of a directory with 12 Photoshop icons, most of which have the word 'final' in their titles" />
-<figcaption>This does not have to be your life!</figcaption>
+  <img
+    src="final-files.png"
+    alt="Screenshot of a directory with 12 Photoshop icons, most of which have the word 'final' in their titles"
+  />
+  <figcaption>
+    This does not have to be your life! Better organization (from the start)
+    will make your life a lot easier.
+  </figcaption>
 </figure>
 
 ## Basic Concepts
 
-### **Frames**
+### Frames
 
 Frames are similar to "artboards" in Adobe products; they are boxes of content inside a large workspace.
 
@@ -53,12 +59,16 @@ The way that you arrange these frames is up to you: do you separate them into pa
   authors={[
     {
       name: 'Josh Hemsley',
-      link: 'https://dribbble.com/joshhemsley'
+      link: 'https://dribbble.com/joshhemsley',
     },
   ]}
 />
 
-<figcaption>The frames here are tiny, but you can see that they are arranged primarily in groups/sections and then side-by-side in sequence. The designer also drew red lines on their workspace to signal how the frames relate.</figcaption>
+<figcaption>
+  The frames here are tiny, but you can see that they are arranged primarily in
+  groups/sections and then side-by-side in sequence. The designer also drew red
+  lines on their workspace to signal how the frames relate.
+</figcaption>
 
 </figure>
 
@@ -82,7 +92,7 @@ One other cool font feature? FontAwesome is included by default, giving you acce
 
 #### Place Image
 
-You can add your images made in other programs, too. One cool feature is that you can perform basic photo filters inside Figma. This is _very_ handy for darkening images (through Exposure) so that text on top of them can have adequate contrast. Or, mess around with the tint to get a pseudo-vintage look.
+You can add your images made in other programs, too. One cool feature is that you can perform basic photo filters inside Figma. This is *very* handy for darkening images (through Exposure) so that text on top of them can have adequate contrast. Or, mess around with the tint to get a pseudo-vintage look.
 
 #### Pen Tool
 
@@ -98,31 +108,31 @@ https://www.youtube.com/watch?v=e1BRH09iwes
 
 #### Drop Shadow
 
- A versatile effect that can be used to make a shape pop off the background by casting a shadow below. The shadow can be offset, the blur size controls the softness, and the color and blend tint and combine the shadow.
+A versatile effect that can be used to make a shape pop off the background by casting a shadow below. The shadow can be offset, the blur size controls the softness, and the color and blend tint and combine the shadow.
 
-*   Drop shadows can also be efficiently applied to a group and layer under the group as a whole instead of each individual shape.
-*   Set a blur size of 0 to create a hard shadow of the shape.
-*   Create an outer glow with an offset of 0 and set blend to Screen.
+- Drop shadows can also be efficiently applied to a group and layer under the group as a whole instead of each individual shape.
+- Set a blur size of 0 to create a hard shadow of the shape.
+- Create an outer glow with an offset of 0 and set blend to Screen.
 
 #### Inner Shadow
 
 A versatile effect that can be used to add inner depth to a shape. These have similar controls to the drop shadow but appear atop the fill but below the stroke on a shape.
 
-*   Like drop shadows, inner shadows can be applied to groups.
-*   Create an inner glow with an offset of 0 and set blend to Screen.
+- Like drop shadows, inner shadows can be applied to groups.
+- Create an inner glow with an offset of 0 and set blend to Screen.
 
 #### Layer Blur
 
- This blurs any given layer's geometry.
+This blurs any given layer's geometry.
 
-*   Blurs of large numbers of pixels can contribute to performance issues.
+- Blurs of large numbers of pixels can contribute to performance issues.
 
 #### Background Blur
 
 This blurs the geometry of all geometry underneath the bounds of the layer with the blur.
 
-*   Blurs of large numbers of pixels can contribute to performance issues.
-*   To see the background blur, make sure to set the fill paint opacity much less than 100%. Opacity can be set as low as 1% to see all background blur.
+- Blurs of large numbers of pixels can contribute to performance issues.
+- To see the background blur, make sure to set the fill paint opacity much less than 100%. Opacity can be set as low as 1% to see all background blur.
 
 ### Components
 
