Fix manual spaces

--- a/src/topics/forms/index.mdx
+++ b/src/topics/forms/index.mdx
@@ -142,14 +142,15 @@ One of the easiest upgrades is to change your button text from a generic "Submit
     An action specific button would enable users to do their task much more
     quickly and accurately. Not all users will read the question or message in a
     dialog box. Most will make decisions without reading it carefully or
-    completely.{' '}
+    completely.
+  </p>
+  <p>
     <strong>
       If an action button is labeled "Ok", this could lead users who ignore
       dialog box text to click the wrong button. But if you label your "Ok"
       button with a specific action, users will be able to see what action
-      they’re about to do
-    </strong>{' '}
-    without reading the dialog box.
+      they’re about to do without reading the dialog box.
+    </strong>
   </p>
 </Blockquote>
 
@@ -185,17 +186,11 @@ When dealing with complex forms, align similar types of content optically. In th
 <figure>
   <div className="grid gap-6 md:grid-cols-2 items-center">
 
-{' '}
-
 <Img src="./optical-before.jpg" alt="Form without optical alignment" />
-
-{' '}
 
 <Img src="./optical-after.png" alt="Form with optical alignment" />
 
   </div>
-
-{' '}
 
 <figcaption>
   <p>
@@ -204,8 +199,6 @@ When dealing with complex forms, align similar types of content optically. In th
     here is tidier.
   </p>
 </figcaption>
-
-{' '}
 
 <License
   type="mit"
@@ -227,9 +220,6 @@ It's important to be clear about which fields are required and which are optiona
 >
   <p>First of all, keep the form simple. Avoid optional input fields in forms, don’t ask users to provide useless information.</p>
   <p>Show the required/optional indicators next to labels instead of input fields to make it easier to scan the form through and see what information needs to be given.</p>
-
-{' '}
-
 <p>
   <strong>If most of the form fields are optional:</strong>
 </p>
