Update Figma tutorial with transitions

--- a/src/topics/figma/index.mdx
+++ b/src/topics/figma/index.mdx
@@ -198,6 +198,20 @@ Click and drag the node to create connections. These connections turn your frame
 
 [View the article](https://help.figma.com/prototyping/prototyping-presenting) to learn about all of your presentation options.
 
+### Transitions
+
+If you’d like to make your prototype transitions a little more interesting than “instant”, here’s the way to add fades, slide between frames, and so forth:
+
+https://youtu.be/MLXoDrX9snM
+
+<iframe
+  style="border: 1px solid rgba(0, 0, 0, 0.1);"
+  width="100%"
+  height="450"
+  src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FJLu7nD5bIAj7GHy9VmJzjHpr%2FUntitled%3Fnode-id%3D1%253A2%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D1%253A2"
+  allowfullscreen
+></iframe>
+
 ## Get Inspired
 
 Figma is somewhat new to the game, but it's already becoming a popular choice for rapid prototyping. You can see examples of what others have done on [Dribbble](https://dribbble.com/search?q=figma) and learn about some of the handy features with the [#FigmaTip](https://twitter.com/hashtag/figmatip?src=hash) hashtag.
