--- a/src/topics/personas/index.mdx
+++ b/src/topics/personas/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Personas
-topic: personas
+topic: ux-research
 resources:
   - title: 'How-To: Personas'
     link: https://www.usability.gov/how-to-and-tools/methods/personas.html
