Reorganize text; add license to image

--- a/src/topics/app-icons/index.mdx
+++ b/src/topics/app-icons/index.mdx
@@ -24,13 +24,28 @@ https://www.youtube.com/watch?v=nYGMwIJqarM
 
 ## Example
 
-App icon from [I Love Hue](https://play.google.com/store/apps/details?id=com.zutgames.ilovehue):
+I chose the [I Love Hue](https://play.google.com/store/apps/details?id=com.zutgames.ilovehue) app because its flat icon uses a unique color palette with a calm, friendly motif that is also used in its gameplay. The shape and colors drew my eye right away.
 
-![Screenshot of app icon and gameplay images](i-love-hue.png)
+<figure>
+
+<Img src="i-love-hue.png" alt="Screenshot of app icon and gameplay images" />
+
+<License
+  type="copyright"
+  link="https://play.google.com/store/apps/details?id=com.zutgames.ilovehue"
+  mediaType="App screenshots"
+  authors={[
+    {
+      name: 'Zut!',
+      link: 'https://play.google.com/store/apps/dev?id=8495314997069321006',
+    },
+  ]}
+  className="mt-4"
+/>
+
+</figure>
 
 Does it work? Let's critique it based on the core aspects from the article.
-
-I chose this app because its flat icon uses a unique color palette with a calm, friendly motif that is also used in its gameplay. The shape and colors drew my eye right away.
 
 ### The Five Core Aspects
 
